GoalTracker/force-app/main/default/objects/Batch_Job_Log__c/Batch_Job_Log__c.object-meta.xml
<CustomObject>
    <label>Batch Job Log</label>
    <nameField>
        <label>Batch Job Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Job Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>