GoalTracker/force-app/main/default/objects/Batch_Job_Log__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <label>Job Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>