GoalTracker/force-app/main/default/objects/Batch_Job_Log__c/recordTypes/Insert.recordType-meta.xml
<RecordType>
    <fullName>Insert</fullName>
    <active>true</active>
    <label>Insert</label>
</RecordType>