GoalTracker/force-app/main/default/objects/Batch_Job_Log__c/recordTypes/Update.recordType-meta.xml
<RecordType>
    <fullName>Update</fullName>
    <active>true</active>
    <label>Update</label>
</RecordType>