GoalTracker/force-app/main/default/objects/Batch_Job_Log__c/recordTypes/Upsert.recordType-meta.xml
<RecordType>
    <fullName>Upsert</fullName>
    <active>true</active>
    <label>Upsert</label>
</RecordType>